Fix z-index of header

--- a/public/css/template/style.css
+++ b/public/css/template/style.css
@@ -923,7 +923,7 @@ section{
     background-color: #53a92c;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-	z-index: 9;
+	z-index: 99999999999;
 }
 .animated {
   -webkit-animation-duration: 1s;
